--- a/.github/workflows/heartbeat.yml
+++ b/.github/workflows/heartbeat.yml
@@ -1,17 +1,18 @@
 name: Supabase Heartbeat
 
-# Exécution automatique toutes les 5 minutes
 on:
   schedule:
-    - cron: '*/5 * * * *'
-  workflow_dispatch: # permet de lancer manuellement
+    - cron: '*/5 * * * *'  # toutes les 5 minutes
+  workflow_dispatch:
 
 jobs:
   call-supabase:
     runs-on: ubuntu-latest
-
     steps:
       - name: Call Supabase Function
         run: |
-          curl -X GET "https://mkjsgiwhmhvmkqmzbhqt.functions.supabase.co/send_heartbeat" \
-          -H "Authorization: Bearer ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}"
+          curl -L -X POST "https://mkjsgiwhmhvmkqmzbhqt.supabase.co/functions/v1/send_heartbeat" \
+          -H "Authorization: Bearer ${{ secrets.SUPABASE_ANON_KEY }}" \
+          -H "apikey: ${{ secrets.SUPABASE_ANON_KEY }}" \
+          -H "Content-Type: application/json" \
+          --data '{"name":"Functions"}'
