--- a/.github/workflows/heartbeat.yml
+++ b/.github/workflows/heartbeat.yml
@@ -2,7 +2,7 @@ name: Supabase Heartbeat
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # toutes les 5 minutes
+    - cron: '*/5 * * * *'
   workflow_dispatch:
 
 jobs:
