--- a/.github/workflows/heartbeat.yml
+++ b/.github/workflows/heartbeat.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Call Supabase Function
         run: |
           curl -L -X POST 'https://mkjsgiwhmhvmkqmzbhqt.supabase.co/functions/v1/send_heartbeat' \
-            -H 'Authorization: Bearer sb_publishable_TIHkvV7Ntlotd0pbcJImpg_FuOPLbFe' \
-            -H 'apikey: sb_publishable_TIHkvV7Ntlotd0pbcJImpg_FuOPLbFe' \
+            -H 'Authorization: Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1ranNnaXdobWh2bWtxbXpiaHF0Iiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc2NTM1NDIyNiwiZXhwIjoyMDgwOTMwMjI2fQ.KxWXXG4B4HNRxeZb9Kjn6cRQ3hVY7O6KqhBAwV0hjgg' \
+            -H 'apikey: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1ranNnaXdobWh2bWtxbXpiaHF0Iiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc2NTM1NDIyNiwiZXhwIjoyMDgwOTMwMjI2fQ.KxWXXG4B4HNRxeZb9Kjn6cRQ3hVY7O6KqhBAwV0hjgg' \
             -H 'Content-Type: application/json' \
             --data '{"name":"Functions"}'
